[tool.poetry]
name = "relay-airgradient"
version = "0.8"
description = "A script for fetching Airgradient data and posting to InfluxDB."
authors = ["Adrian Robert <arobert@interstitiality.net>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python     = "^3.7"
requests   = "~2.25"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
